Animations: Fix blend to identity for transform: translate Z

We now blend towards, not away from, 0 when blending to identity.

BUG=687046

Review-Url: https://codereview.chromium.org/2667923002
Cr-Commit-Position: refs/heads/master@{#447246}

Former-commit-id: 6ca8fe116092372724468846c41bee8faaceacd8